--- a/server/app/Cargo.toml
+++ b/server/app/Cargo.toml
@@ -4,14 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-domain = { path = "../domain" }
 config = { path = "../config" }
-infra_grpc = { path = "../infra/grpc" }
-infra_repository_impl = { path = "../infra/repository_impl" }
 
 anyhow = "1.0.60"
-tokio = { version = "1.20.1", features = ["rt-multi-thread"] }
-tonic = { version = "0.7.2", features = ["compression"] }
+tokio = { version = "1.20.1", features = ["rt-multi-thread", "macros"] }
 tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
 tracing = "0.1.36"
-tower-http = { version = "0.3.4", features = ["trace"] }
