--- a/server/.env.sample
+++ b/server/.env.sample
@@ -1,10 +1,10 @@
 GAME_DATA_SERVER_GRPC_ENDPOINT_URL=http://localhost:8081
 
-CONIFER_DB_HOST=localhost
-CONIFER_DB_PORT=3307
-CONIFER_DB_DATABASE_NAME=conifer
-CONIFER_DB_USER=mysql
-CONIFER_DB_PASSWORD=$tr0ngpAssw0rd
+CONIFERS_DB_HOST=localhost
+CONIFERS_DB_PORT=3307
+CONIFERS_DB_DATABASE_NAME=conifers
+CONIFERS_DB_USER=mysql
+CONIFERS_DB_PASSWORD=$tr0ngpAssw0rd
 
 RUST_LOG=debug,h2::codec::framed_read=info
 RUST_BACKTRACE=1
