feat: add scheduling logic

--- a/server/app/Cargo.toml
+++ b/server/app/Cargo.toml
@@ -10,3 +10,5 @@ anyhow = "1.0.62"
 tokio = { version = "1.20.1", features = ["rt-multi-thread", "macros"] }
 tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
 tracing = "0.1.36"
+job_scheduler = "1.2.1"
+tokio-cron-scheduler = "0.8.0"
