--- a/.scalafix.conf
+++ b/.scalafix.conf
@@ -1,8 +1,6 @@
 rules = [
   NoAutoTupling,
-  RemoveUnused,
   DisableSyntax,
   LeakingImplicitClassVal,
-  NoValInForComprehension,
-  ProcedureSyntax,
+  NoValInForComprehension
 ]
