--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - "17843:3306"
 
   phpmyadmin:
-    image: phpmyadmin:5.2.0
+    image: phpmyadmin/phpmyadmin
     environment:
       - PMA_HOST=db
       - PMA_PORT=3306
