feat: allow Rust crate automerges

--- a/renovate.json
+++ b/renovate.json
@@ -2,5 +2,21 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
     "config:base"
+  ],
+  "packageRules": [
+    {
+      "description": "automerge Rust crate updates (>= 1.0.0)",
+      "matchUpdateTypes": ["minor", "patch"],
+      "matchManagers": ["cargo"],
+      "matchCurrentVersion": "!/^0/",
+      "automerge": true
+    },
+    {
+      "description": "automerge Rust crate updates (< 1.0.0)",
+      "matchUpdateTypes": ["patch"],
+      "matchManagers": ["cargo"],
+      "matchCurrentVersion": "/^0/",
+      "automerge": true
+    }
   ]
 }
