--- a/.github/workflows/build-and-release-application.yaml
+++ b/.github/workflows/build-and-release-application.yaml
@@ -4,9 +4,6 @@ on:
     paths-ignore:
       - '**.md'
 
-env:
-  image_name: ghcr.io/giganticminecraft/seichi-timed-stats-conifers
-
 jobs:
   lint-and-test:
     name: Lint and test server
@@ -58,13 +55,20 @@ jobs:
           args: --manifest-path server/Cargo.toml --all-features
 
   build-image:
-    name: Build server docker image (and publish on master)
+    strategy:
+      matrix:
+        include:
+          - component_name: ingestor
+            image_name: ghcr.io/giganticminecraft/seichi-timed-stats-conifers-ingestor
+            dockerfile_relative_to_server: ./Dockerfile-ingestor
+
+    name: Build server docker image (and publish on master) for ${{ matrix.component_name }}
     needs: [ lint-and-test ]
     runs-on: ubuntu-20.04
     outputs:
       image_tag: ${{ steps.meta.outputs.tags }}
     concurrency:
-      group: ${{ github.ref }}-docker-build
+      group: docker-build-${{ matrix.component_name }}-${{ github.ref }}
       cancel-in-progress: true
     steps:
       - name: checkout
@@ -85,7 +89,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v4
         with:
-          images: ${{ env.image_name }}
+          images: ${{ matrix.image_name }}
           tags: |
             type=sha,prefix=sha-,suffix=,format=short
 
@@ -94,7 +98,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: ./server
-          file: ./Dockerfile
+          file: ${{ matrix.dockerfile_relative_to_server }}
           builder: ${{ steps.buildx.outputs.name }}
           push: ${{ github.ref == 'refs/heads/master' }}
           tags: ${{ steps.meta.outputs.tags }}
