fix(ci): Dockerfile の指定パスがズレているのを直す

--- a/.github/workflows/build-and-release-application.yaml
+++ b/.github/workflows/build-and-release-application.yaml
@@ -60,7 +60,7 @@ jobs:
         include:
           - component_name: ingestor
             image_name: ghcr.io/giganticminecraft/seichi-timed-stats-conifers-ingestor
-            dockerfile_relative_to_server: ./Dockerfile-ingestor
+            dockerfile: ./server/Dockerfile-ingestor
 
     name: Build server docker image (and publish on master) for ${{ matrix.component_name }}
     needs: [ lint-and-test ]
