--- a/server/infra/repository_impl/Cargo.toml
+++ b/server/infra/repository_impl/Cargo.toml
@@ -10,3 +10,4 @@ chrono = "0.4.24"
 diesel = { version = "2.0.4", features = ["chrono"] }
 domain = { path = "../../domain" }
 diesel-async = { version = "0.2.2", features = ["mysql", "deadpool"] }
+futures-util = "0.3.28"
