--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
 
-members = ["ingestor", "config", "domain", "infra/repository_impl"]
+members = ["ingestor", "config", "domain", "infra/db_repository_impl", "infra/upstream_repository_impl"]
