--- a/server/infra/upstream_repository_impl/Cargo.toml
+++ b/server/infra/upstream_repository_impl/Cargo.toml
@@ -5,3 +5,13 @@ edition = "2021"
 
 [dependencies]
 domain = { path = "../../domain" }
+prost = "0.11.9"
+tonic = { version = "0.9.2", features = ["gzip"] }
+pbjson-types = "0.5.1"
+envy = "0.4.2"
+serde = "1.0.163"
+anyhow = "1.0.71"
+tracing = "0.1.37"
+async-trait = "0.1.68"
+chrono = "0.4.24"
+
