--- a/server/ingestor/Cargo.toml
+++ b/server/ingestor/Cargo.toml
@@ -4,11 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-config = { path = "../config" }
+infra-db-repository-impl = { path = "../infra/db_repository_impl" }
+infra-upstream-repository-impl = { path = "../infra/upstream_repository_impl" }
+domain = { path = "../domain" }
 
 anyhow = "1.0.71"
 tokio = { version = "1.28.1", features = ["rt-multi-thread", "macros", "signal"] }
 tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
-tracing = "0.1.37"
-job_scheduler = "1.2.1"
-tokio-cron-scheduler = "0.9.4"
