--- a/server/Dockerfile-database-migration
+++ b/server/Dockerfile-database-migration
@@ -1,10 +1,7 @@
 # syntax=docker/dockerfile:1.5
 FROM rust:1.70.0-slim-bookworm
 WORKDIR /app
-RUN apt-get update && \
-    apt-get install -y libmysqlclient-dev && \
-    rm -rf /var/lib/apt/lists/* && \
-    cargo install diesel_cli --no-default-features --features mysql
+RUN cargo install diesel_cli --no-default-features --features mysql
 
 COPY --link . .
 
