fix: `default-libmysqlclient-dev` を `apt-get install` する
rust:1.70.0-slim-bookworm には `default-libmysqlclient-dev` がインストールされていなかった・・・

--- a/server/Dockerfile-database-migration
+++ b/server/Dockerfile-database-migration
@@ -1,7 +1,10 @@
 # syntax=docker/dockerfile:1.5
 FROM rust:1.70.0-slim-bookworm
 WORKDIR /app
-RUN cargo install diesel_cli --no-default-features --features mysql
+RUN apt-get update && \
+    apt-get install -y default-libmysqlclient-dev && \
+    rm -rf /var/lib/apt/lists/* && \
+    cargo install diesel_cli --no-default-features --features mysql
 
 COPY --link . .
 
