--- a/server/Dockerfile-ingestor
+++ b/server/Dockerfile-ingestor
@@ -29,4 +29,5 @@ RUN --mount=type=cache,target=/ingestor/server cargo build --release
 FROM gcr.io/distroless/cc
 LABEL org.opencontainers.image.source=https://github.com/GiganticMinecraft/seichi-timed-stats-conifers
 COPY --from=build-env --link /app/target/release/seichi-timed-stats-conifers /
+COPY --from=debian:bullseye /lib/x86_64-linux-gnu/libz.so.1 /lib/x86_64-linux-gnu/libz.so.1
 CMD ["./seichi-timed-stats-conifers"]
