--- a/server/.env.example
+++ b/server/.env.example
@@ -1,1 +1,8 @@
-DATABASE_URL=mysql://mariadb:password@127.0.0.1:3306/seichi_timed_stats_conifers
+DB_CONNECTION_HOST_AND_PORT=127.0.0.1:3306
+DB_CONNECTION_USER=mariadb
+DB_CONNECTION_PASSWORD=password
+DB_CONNECTION_DATABASE=seichi_timed_stats_conifers
+DB_CONNECTION_POOL_SIZE=3
+
+RUST_BACKTRACE=1
+RUST_LOG=debug,h2::codec::framed_read=info
