--- a/server/ingestor/Cargo.toml
+++ b/server/ingestor/Cargo.toml
@@ -11,3 +11,8 @@ domain = { path = "../domain" }
 anyhow = "1.0.71"
 tokio = { version = "1.28.2", features = ["rt-multi-thread", "macros", "signal"] }
 tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
+sentry = "0.31.3"
+
+serde = "1.0.164"
+envy = "0.4.2"
+once_cell = "1.18.0"
