Apply suggestions from code review
Co-authored-by: Kory <6561358+kory33@users.noreply.github.com>

--- a/server/.env.example
+++ b/server/.env.example
@@ -7,4 +7,4 @@ DB_CONNECTION_POOL_SIZE=3
 RUST_BACKTRACE=1
 RUST_LOG=debug,h2::codec::framed_read=info
 
-ENV_NAME=local
+SENTRY_ENVIRONMENT_NAME=local
