--- a/server/ingestor/Cargo.toml
+++ b/server/ingestor/Cargo.toml
@@ -13,6 +13,7 @@ tokio = { version = "1.28.2", features = ["rt-multi-thread", "macros", "signal"]
 tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
 sentry = { version = "0.31.3", features = ["profiling", "tracing"] }
 
+tracing = "0.1.37"
 serde = "1.0.164"
 envy = "0.4.2"
 once_cell = "1.18.0"
