--- a/server/ingestor/Cargo.toml
+++ b/server/ingestor/Cargo.toml
@@ -10,7 +10,7 @@ domain = { path = "../domain" }
 
 anyhow = "1.0.71"
 tokio = { version = "1.28.2", features = ["rt-multi-thread", "macros", "signal"] }
-tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
+tracing-subscriber = { version = "0.3.17", features = ["std", "registry", "env-filter"] }
 sentry = { version = "0.31.3", features = ["profiling", "tracing"] }
 
 tracing = "0.1.37"
