--- a/server/ingestor/Cargo.toml
+++ b/server/ingestor/Cargo.toml
@@ -19,4 +19,4 @@ envy = "0.4.2"
 once_cell = "1.18.0"
 pprof = "0.11.1"
 pyroscope = "0.5.6"
-pyroscope_pprofrs = "0.2.5"
+pyroscope_pprofrs = { git = "https://github.com/grafana/pyroscope-rs.git", rev = "f093c97" }
