--- a/server/infra/upstream_repository_impl/buf.gen.yaml
+++ b/server/infra/upstream_repository_impl/buf.gen.yaml
@@ -16,7 +16,7 @@ plugins:
       # https://github.com/neoeinstein/protoc-gen-prost/tree/main/protoc-gen-tonic
       - compile_well_known_types
       - extern_path=.google.protobuf=::pbjson_types
-  - remote: buf.build/prost/plugins/crate:v0.1.5-2
+  - plugin: buf.build/community/neoeinstein-prost-crate:v0.3.1
     out: src/gen
     # https://github.com/neoeinstein/protoc-gen-prost/tree/main/protoc-gen-prost-crate
     opt:
